--- a/pages_css/product.css
+++ b/pages_css/product.css
@@ -155,51 +155,6 @@
     color: #5e5e5e
 }
 
-.image_selected {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: calc(100% + 15px);
-    height: 525px;
-    -webkit-transform: translateX(-15px);
-    -moz-transform: translateX(-15px);
-    -ms-transform: translateX(-15px);
-    -o-transform: translateX(-15px);
-    transform: translateX(-15px);
-    border: solid 1px #e8e8e8;
-    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    padding: 15px
-}
-
-.image_list li {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 165px;
-    border: solid 1px #e8e8e8;
-    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.1) !important;
-    margin-bottom: 15px;
-    cursor: pointer;
-    padding: 15px;
-    -webkit-transition: all 200ms ease;
-    -moz-transition: all 200ms ease;
-    -ms-transition: all 200ms ease;
-    -o-transition: all 200ms ease;
-    transition: all 200ms ease;
-    overflow: hidden
-}
-
 @media (max-width: 390px) {
     .product_fav {
         display: none
@@ -353,67 +308,6 @@ ul {
     padding-bottom: 140px
 }
 
-.image_list li {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 165px;
-    border: solid 1px #e8e8e8;
-    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
-    margin-bottom: 15px;
-    cursor: pointer;
-    padding: 15px;
-    -webkit-transition: all 200ms ease;
-    -moz-transition: all 200ms ease;
-    -ms-transition: all 200ms ease;
-    -o-transition: all 200ms ease;
-    transition: all 200ms ease;
-    overflow: hidden
-}
-
-.image_list li:last-child {
-    margin-bottom: 0
-}
-
-.image_list li:hover {
-    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.3)
-}
-
-.image_list li img {
-    max-width: 100%
-}
-
-.image_selected {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: calc(100% + 15px);
-    height: 525px;
-    -webkit-transform: translateX(-15px);
-    -moz-transform: translateX(-15px);
-    -ms-transform: translateX(-15px);
-    -o-transform: translateX(-15px);
-    transform: translateX(-15px);
-    border: solid 1px #e8e8e8;
-    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    padding: 15px
-}
-
-.image_selected img {
-    max-width: 100%
-}
-
 .product_category {
     font-size: 12px;
     color: rgba(0, 0, 0, 0.5)
@@ -526,4 +420,12 @@ ul {
 
 .card-title-box .card {
     margin: 20px;
+}
+
+.card-title,
+.card-body a {
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    display: flex;
 }
